// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph bold 1`] = `
<p
  class="sc-dkzDqf iLqUUV"
  data-testid="h-p-tag"
>
  Heller UI
</p>
`;

exports[`Paragraph default 1`] = `
<p
  class="sc-bczRLJ kjEFYd"
  data-testid="h-p-tag"
>
  Heller UI
</p>
`;

exports[`Paragraph dynamic color 1`] = `
<p
  class="sc-bczRLJ jyHVzW"
  color="deeppink"
  data-testid="h-p-tag"
>
  Heller UI
</p>
`;

exports[`Paragraph italic & bold 1`] = `
<p
  class="sc-hKMtZM eeCoKM"
  data-testid="h-p-tag"
>
  Heller UI
</p>
`;

exports[`Paragraph italic 1`] = `
<p
  class="sc-gsnTZi dIjouz"
  data-testid="h-p-tag"
>
  Heller UI
</p>
`;
